commit de teste dos arquivos Login, Perfil, Teste e HomeContoller

--- a/RecupereJa/RecupereJa.csproj
+++ b/RecupereJa/RecupereJa.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Views\Home\Class.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="TESTE\" />
   </ItemGroup>
 
