--- a/RecupereJa/RecupereJa.csproj
+++ b/RecupereJa/RecupereJa.csproj
@@ -10,4 +10,8 @@
     <Content Remove="Views\Home\Class.cshtml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ViewModel\" />
+  </ItemGroup>
+
 </Project>
