inserição do banco de dados e auatorização sla

--- a/RecupereJa/appsettings.json
+++ b/RecupereJa/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=recupereja-recupereja.b.aivencloud.com;Port=25199;Database=dafultdb;Uid=avnadmin;Pwd=AVNS_-K9RvF2V56r-YrcH11l;"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
