Alterações locais antes do merge

--- a/RecupereJa/appsettings.json
+++ b/RecupereJa/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=recupereja-recupereja.b.aivencloud.com;Port=25199;Database=dafultdb;Uid=avnadmin;Pwd=AVNS_-K9RvF2V56r-YrcH11l;"
+        "DefaultConnection": "Server=recupereja-recupereja.b.aivencloud.com;Port=25199;Database=defaultdb;Uid=avnadmin;Pwd=AVNS_-K9RvF2V56r-YrcH11l;"
     },
     "Logging": {
         "LogLevel": {
