--- a/RecupereJa/appsettings.json
+++ b/RecupereJa/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=3306;Database=RecupereJa;User ID=root;Password=123456;"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=recupereja-recupereja.b.aivencloud.com;Port=25199;Database=defaultdb;Uid=avnadmin;Pwd=AVNS_-K9RvF2V56r-YrcH11l;"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
