--- a/RecupereJa/RecupereJa.csproj
+++ b/RecupereJa/RecupereJa.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>1b49a187-14fd-41fe-a01e-86ff27fcb1d2</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
