Inicio de implementação Auth0

--- a/RecupereJa/appsettings.json
+++ b/RecupereJa/appsettings.json
@@ -2,11 +2,15 @@
     "ConnectionStrings": {
         "DefaultConnection": "Server=recupereja-recupereja.b.aivencloud.com;Port=25199;Database=defaultdb;Uid=avnadmin;Pwd=AVNS_-K9RvF2V56r-YrcH11l;"
     },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "Auth0": {
+        "Domain": "dev-nkkhmfsoi4d1o532.us.auth0.com",
+        "ClientId": "qMnhpdKd3NMx0WI3cLZqCZEfBeaTl3tz"
     }
-  },
-  "AllowedHosts": "*"
 }
