--- a/RecupereJa/appsettings.json
+++ b/RecupereJa/appsettings.json
@@ -1,19 +1,12 @@
 {
-  "Auth0": {
-    "Domain": "dev-nkkhmfsoi4d1o532.us.auth0.com",
-    "ClientId": "qMnhpdKd3NMx0WI3cLZqCZEfBeaTl3tz"
-  },
-
   "ConnectionStrings": {
-    "DefaultConnection": "Server=recupereja-recupereja.b.aivencloud.com;Port=25199;Database=defaultdb;Uid=avnadmin;Pwd=AVNS_-K9RvF2V56r-YrcH11l;SslMode=Required;"
+    "DefaultConnection": "Server=recupereja-recupereja.b.aivencloud.com;Port=25199;Database=defaultdb;User=avnadmin;Password=AVNS_-K9RvF2V56r-YrcH11l;SslMode=Required;"
   },
-
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-
   "AllowedHosts": "*"
 }
