Aprimora gerenciamento de usuários e itens
As principais mudanças incluem a adição de novos namespaces e pacotes, como o `MailKit`, para suporte ao envio de e-mails através do serviço de SAC. A lógica de autenticação foi melhorada, permitindo que os usuários sejam buscados por email ou identificador, aumentando a flexibilidade e segurança do sistema.

As views foram atualizadas para incluir novos campos e funcionalidades, como upload de imagens e exibição de informações adicionais sobre os itens. Métodos obsoletos foram removidos e a lógica do controlador foi simplificada, resultando em um código mais limpo e eficiente.

Além disso, o arquivo de configuração `appsettings.json` foi atualizado para incluir as novas configurações de e-mail, e um novo arquivo de imagem foi adicionado para suportar a funcionalidade de upload.

--- a/RecupereJa/appsettings.json
+++ b/RecupereJa/appsettings.json
@@ -1,12 +1,20 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=recupereja-recupereja.b.aivencloud.com;Port=25199;Database=defaultdb;User=avnadmin;Password=AVNS_-K9RvF2V56r-YrcH11l;SslMode=Required;"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=recupereja-recupereja.b.aivencloud.com;Port=25199;Database=defaultdb;User=avnadmin;Password=AVNS_-K9RvF2V56r-YrcH11l;SslMode=Required;"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+
+    "EmailSettings": {
+        "SmtpServer": "smtp.gmail.com",
+        "Port": 587,
+        "User": "seuemail@gmail.com",
+        "Password": "sua_senha_de_app",
+        "ToEmail": "destinatario@teste.com"
     }
-  },
-  "AllowedHosts": "*"
 }
